# wl-dictate

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  README.md  build-pyinstaller.sh  build.sh  config.json  hotkey_listener.py  pyproject.toml  toggle_dictation.py  tray_app.py  whisper_dictate.py  wl_dictate.py
docs/: performance-audit-20260408-v1.md
scripts/: .nfs000000000173f129000000e0  llama-contextual.sh  llama.toml
systemd/: wl-dictate.service
tests/: conftest.py  test_config.py  test_contextual_session.py  test_correcting_emitter.py  test_emitter.py  test_hardware.py  test_hypr.py  test_ipc.py  test_render.py  test_streaming.py  test_textproc.py  test_transform.py  test_vad.py  test_vkbd.py  test_worker_capture.py
utils/: benchmark_latency.py  eval_stt.py  eval_transform.py
wldictate/: __init__.py  audio.py  commands.py  config.py  emitter.py  hardware.py  hypr.py  ipc.py  notify.py  render.py  streaming.py  textproc.py  toggle.py  transcriber.py  transform.py  tray.py  vad.py  vkbd.py  worker.py
